--- a/style.css
+++ b/style.css
@@ -34,8 +34,9 @@ header .caja .correo {
 
 .menu {
   position: absolute;
+  top: 0;
+  padding-top: 140px;
   width: 100%;
-  top: 14%;
 }
 
 .menu ul {
@@ -72,7 +73,8 @@ header .caja .correo {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 40vh;
+  padding-top: 400px;
+  top: 0;
 }
 
 .texto-portada h1 {
@@ -158,9 +160,10 @@ header .caja .correo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: auto;
+  width: 60%;
 }
 
 .seccion-dos .cartas .carta {
@@ -179,5 +182,81 @@ header .caja .correo {
 
 .seccion-dos .cartas .carta img {
   width: 60px;
+}
+
+.contenedor {
+  margin-top: 50px;
+  color: #fff;
+  background-color: #000035;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.contenedor .redes {
+  margin: 30px 0 30px 0;
+}
+
+.contenedor .redes .iconos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.contenedor .redes .iconos .fab {
+  margin-top: 20px;
+  font-size: 60px;
+}
+
+.contenedor .contacto {
+  margin: 30px 0 30px 0;
+}
+
+.contenedor p {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.contenedor .correo {
+  margin: 30px 0 30px 0;
+  text-align: center;
+}
+
+.contenedor .correo .datos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contenedor .correo .datos h4 {
+  margin-top: 5px;
+}
+
+.contenedor .correo .datos input {
+  text-align: center;
+  border-radius: 10px;
+  border: none;
+  width: 50%;
+  margin: auto;
+  height: 30px;
+}
+
+.contenedor .correo .datos .boton-enviar {
+  margin-top: 10px;
+  font-family: "Varela Round", sans-serif;
+  cursor: pointer;
+}
+
+.contenedor .correo .datos .boton-enviar:hover {
+  background-color: navy;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
