--- a/style.scss
+++ b/style.scss
@@ -25,8 +25,10 @@ header {
 }
 .menu {
   position: absolute;
+  top: 0;
+  padding-top: 140px;
   width: 100%;
-  top: 14%;
+
   ul {
     display: flex;
     justify-content: space-around;
@@ -55,7 +57,8 @@ header {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 40vh;
+  padding-top: 400px;
+  top: 0;
 
   h1 {
     margin-bottom: 30px;
@@ -114,7 +117,9 @@ header {
   }
   .cartas {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    margin: auto;
+    width: 60%;
     .carta {
       text-align: center;
       background-color: #fff;
@@ -128,6 +133,61 @@ header {
       img {
         width: 60px;
       }
+    }
+  }
+}
+.contenedor {
+  margin-top: 50px;
+  color: #fff;
+  background-color: rgb(0, 0, 53);
+  display: flex;
+  justify-content: space-around;
+  .redes {
+    margin: 30px 0 30px 0;
+    .iconos {
+      display: flex;
+      justify-content: space-around;
+      .fab {
+        margin-top: 20px;
+        font-size: 60px;
+      }
+    }
+  }
+  .contacto {
+    margin: 30px 0 30px 0;
+  }
+  p {
+    margin-top:15px;
+    margin-bottom: 15px;
+  }
+  .correo {
+    margin: 30px 0 30px 0;
+    text-align: center;
+    .datos {
+      h4 {
+        margin-top: 5px;
+      }
+      display: flex;
+      flex-direction: column;
+      input {
+        text-align: center;
+        border-radius: 10px;
+        border: none;
+        width: 50%;
+        margin: auto;
+        height: 30px;
+      }
+      .boton-enviar {
+        margin-top: 10px;
+        font-family: "Varela Round", sans-serif;
+        cursor: pointer;
+
+        &:hover {
+          background-color: navy;
+          color: white;
+        }
+      }
+      
     }
   }
 }
